Deque Analysis Color Contrast fixes

--- a/src/app/shared/alert/alert.component.scss
+++ b/src/app/shared/alert/alert.component.scss
@@ -1,3 +1,6 @@
 .close:focus {
   outline: none !important;
 }
+button.close {
+  opacity: 0.6;
+}
